# Ascent

./: CMakeLists.txt  FragmentShader.fragmentshader  README.md  VertexShader.vertexshader  ascend.sh  main.cpp  play.sh  reascend.sh  test
doc/: documentation.md
src/: VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  main.cpp
src/core/: core.cpp  core.hpp
src/shaders/: FragmentShader.glsl  ManualPerspective.glsl  VertexShader.glsl  shader.cpp  shader.hpp
